--- a/src/style/bootstrap/dropdown.scss
+++ b/src/style/bootstrap/dropdown.scss
@@ -51,16 +51,16 @@ $dropdown-item-hover: #F3F7F9;
     @include transition(all .2s ease-out);
     background-clip: padding-box;
     &:after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 0 10px 10px 10px;
-        border-color: transparent transparent #FFF transparent;
-        top: -10px;
-        right: 50%;
-        margin-right: -10px;
+        //content: '';
+        //position: absolute;
+        //width: 0;
+        //height: 0;
+        //border-style: solid;
+        //border-width: 0 10px 10px 10px;
+        //border-color: transparent transparent #FFF transparent;
+        //top: -10px;
+        //right: 50%;
+        //margin-right: -10px;
     }
     &:before {
         //content: '';
