--- a/src/style/bootstrap/menu.scss
+++ b/src/style/bootstrap/menu.scss
@@ -248,9 +248,10 @@
             z-index: 1000;
             top: $top-menu-height;
             height: 410px;
-            left: -350px;
+            left: -374px;
             background: transparent;
             border: none;
+            margin: 0;
             @include box-shadow(0 0 15px rgba(0, 0, 0, .25));
             @include border-radius($base-border-radius);
 
@@ -258,7 +259,6 @@
             &:after {
                 //right: 73px;
             }
-
         }
 
         &.unread:after {
@@ -450,7 +450,7 @@
         .inbox_arrow {
             position: absolute;
             top: -10px;
-            right: 53px;
+            right: 36px;
             z-index: 0;
             width: 40px;
             margin-left: -20px;
