--- a/src/style/bootstrap/menu.scss
+++ b/src/style/bootstrap/menu.scss
@@ -255,7 +255,7 @@
             @include box-shadow(0 0 15px rgba(0, 0, 0, .25));
             @include border-radius($base-border-radius);
 
-            &:before {
+            &:after {
                 display: none;
             }
         }
