убрал стиль для .container1

--- a/src/style/bootstrap/grid.scss
+++ b/src/style/bootstrap/grid.scss
@@ -1,6 +1,6 @@
-.container1, #container1, #cfg_container1 {
-    margin-top: 100px;
-}
+//.container1, #container1, #cfg_container1 {
+//    margin-top: 100px;
+//}
 
 .adm_container {
     width: 960px;
