--- a/src/style/bootstrap/vars.scss
+++ b/src/style/bootstrap/vars.scss
@@ -7,4 +7,5 @@ $base-line-height: 1.4;
 //$base-font-family: "Open Sans", Helvetica Neue, Arial, Helvetica, sans-serif;
 $base-font-family: "Open Sans", Arial, Helvetica, sans-serif;
 $base-border-radius: 4px;
-$top-menu-height: 55px;$font-m: $base-font-size;
+$top-menu-height: 55px;
+$font-m: $base-font-size;
